--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "scripts": {
     "build": "cd frontend && npm run build",
-    "dev": "cd frontend && npm run dev",
-    "install": "cd frontend && npm install"
+    "dev": "cd frontend && npm run dev"
   },
   "workspaces": [
     "frontend"
