Add PDF headers to Vercel configuration for resume files, ensuring proper content type, security, and caching settings for improved deployment and performance.

--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,23 @@
       ]
     },
     {
+      "source": "/resume/(.*\\.pdf)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/pdf"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "SAMEORIGIN"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         {
