Update Vercel configuration to exclude 'resume/' from routing and enhance security headers with 'X-Content-Type-Options' and 'Access-Control-Allow-Origin' settings for improved deployment and performance.

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       "destination": "/api/$1"
     },
     {
-      "source": "/((?!api/).*)",
+      "source": "/((?!api/|resume/).*)",
       "destination": "/index.html"
     }
   ],
@@ -35,8 +35,16 @@
           "value": "SAMEORIGIN"
         },
         {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
           "key": "Cache-Control",
           "value": "public, max-age=3600"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
         }
       ]
     },
