--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,8 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public - commented out to allow resume PDFs
+# public
 
 # Storybook build outputs
 .out
