--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "gray-matter": "^4.0.3",
-    "markdown-it": "^14.1.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
+    "github-calendar": "^2.3.4",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.453.0",
+    "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
@@ -31,5 +32,3 @@
     "vite": "^5.4.8"
   }
 }
-
-
