Update project JSON files and resume documentation
- Added an "images" field to multiple project JSON files to accommodate future image assets.
- Removed outdated portrait image documentation from README.md to streamline content.
- Introduced a new resume version (v2) with updated content and structure, saved as resume-v2.pdf.
- Updated resume.json to reflect the new version and its metadata, marking it as the latest version.

--- a/frontend/public/api/projects.json
+++ b/frontend/public/api/projects.json
@@ -89,6 +89,7 @@
       "Real-time data processing",
       "Backtesting framework"
     ],
+    "images": [],
     "featured": false,
     "kind": "experimental"
   },
@@ -105,6 +106,7 @@
       "Quick transformations",
       "Batch processing"
     ],
+    "images": [],
     "featured": false,
     "kind": "experimental"
   }
