--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -15,7 +15,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=3600, s-maxage=86400"
+          "value": "public, max-age=0, s-maxage=0, must-revalidate"
         }
       ]
     },
