Update QFI project details and media assets
- Changed role from Co-Founder & Part-Time CTO to Founding Engineer & Consultant for clarity.
- Expanded technology stack to include C++ alongside existing technologies.
- Added a new image asset (qfi.png) to enhance visual representation of the QFI project.

--- a/frontend/public/api/projects.json
+++ b/frontend/public/api/projects.json
@@ -2,11 +2,12 @@
   {
     "id": "qfi-capital",
     "title": "QFI Research Capital",
-    "role": "Co-Founder & Part-Time CTO",
+    "role": "Founding Engineer & Consultant",
     "description": "Algorithm-driven trade execution with real-time analytics, risk management, and AI-powered signal generation.",
     "contribution": "As co-founder and CTO, I architected and built the entire trading platform from scratch...",
     "tech": [
       "Python",
+      "C++",
       "PostgreSQL",
       "InfluxDB",
       "Docker",
@@ -17,7 +18,9 @@
     "link": "https://qficapital.in",
     "embedSite": "https://qficapital.in",
     "status": "Live",
-    "images": [],
+    "images": [
+      "projects/qfi/qfi.png"
+    ],
     "video": null,
     "videoPoster": null,
     "highlights": [
