--- a/backend/app/content/projects.json
+++ b/backend/app/content/projects.json
@@ -3,8 +3,8 @@
     "id": "qfi-capital",
     "title": "QFI Research Capital",
     "role": "Founding Engineer & Consultant",
-    "description": "Algorithm-driven trade execution with real-time analytics, risk management, and AI-powered signal generation.",
-    "contribution": "As co-founder and CTO, I architected and built the entire trading platform from scratch...",
+    "description": "Algorithmic trading platform with mid‑frequency execution, real‑time analytics, risk management, and modular architecture. Built institutional‑grade data and execution pipelines with foundations for portfolio management and future AI‑driven signal generation.",
+    "contribution": "Architected and led the initial build for four months (co‑founder → consultant). Implemented the core backend, real‑time streaming ingestion, Kafka pipelines, and aggregation layers feeding InfluxDB/PostgreSQL. Integrated risk engines and portfolio analytics, and set up service orchestration and observability to support production operations.",
     "tech": ["Python", "C++", "PostgreSQL", "InfluxDB", "Docker", "Kafka", "Redis", "Kite Connect"],
     "link": "https://qficapital.in",
     "embedSite": "https://qficapital.in",
@@ -15,9 +15,13 @@
     "video": null,
     "videoPoster": null,
     "highlights": [
-      "Real-time trade execution with sub-second latency",
-      "Microservices architecture with Kafka event streaming",
-      "Integrated risk engines and portfolio management"
+      "Mid‑frequency algorithmic trading with real‑time analytics and execution.",
+      "Kafka‑based streaming architecture: sub‑second ingestion, processing, and aggregation.",
+      "Risk engines and portfolio analytics; institutional‑grade automation and controls.",
+      "Modular microservices on Docker with resilient pipelines and observability.",
+      "Backtesting and simulation groundwork for strategy validation and tuning.",
+      "Multi‑asset support across equities and derivatives via unified data plane.",
+      "Foundations for AI signal generation and future portfolio management extensions."
     ],
     "featured": true,
     "kind": "project"
