Enhance QFI Research Capital project details and related fields
- Updated project description to provide a clearer overview of the algorithmic trading platform, emphasizing mid-frequency execution and modular architecture.
- Revised contribution details to highlight key technical implementations and leadership role.
- Expanded highlights to include additional features such as backtesting groundwork and multi-asset support.
- Added relatedProjects and relatedPosts fields to improve project connectivity and resource accessibility.
- Updated property appraisal project to include relatedProjects and relatedPosts for consistency.

--- a/frontend/public/api/projects/property-appraisal.json
+++ b/frontend/public/api/projects/property-appraisal.json
@@ -33,6 +33,12 @@
     "Intermediate JSONL persistence for traceability and debugging; centralized logs and config.",
     "Business impact: hours-to-minutes turnaround, reduced manual entry, improved accuracy, production-ready."
   ],
+  "relatedProjects": [
+    "etl-pipeline"
+  ],
+  "relatedPosts": [
+    "fastapi-practices"
+  ],
   "featured": true,
   "kind": "project"
 }
