--- a/backend/app/content/projects.json
+++ b/backend/app/content/projects.json
@@ -4,7 +4,19 @@
     "title": "QFI Research Capital",
     "role": "Founding Engineer & Consultant",
     "description": "Algorithmic trading platform with mid‑frequency execution, real‑time analytics, risk management, and modular architecture. Built institutional‑grade data and execution pipelines with foundations for portfolio management and future AI‑driven signal generation.",
-    "contribution": "Architected and led the initial build for four months (co‑founder → consultant). Implemented the core backend, real‑time streaming ingestion, Kafka pipelines, and aggregation layers feeding InfluxDB/PostgreSQL. Integrated risk engines and portfolio analytics, and set up service orchestration and observability to support production operations.",
+    "contribution": "Architected and led the initial build for four months (co‑founder → consultant).",
+    "contributionBullets": [
+      "Designed the event‑driven system architecture and core domain model.",
+      "Implemented real‑time market data ingestion via WebSockets and Kafka producers.",
+      "Built Kafka consumer services for ETL aggregation (multi‑interval OHLCV) into InfluxDB.",
+      "Established PostgreSQL as the transactional store for orders, positions, and configs.",
+      "Implemented Redis caching for quotes/LTP and session/token management.",
+      "Integrated Kite Connect: OAuth flow, token lifecycle, and throttled order execution.",
+      "Added risk engines (position sizing, exposure limits, stop logic) in the execution path.",
+      "Created REST APIs (FastAPI) for orders, positions, health, and market data control.",
+      "Defined observability: structured logging, metrics, health checks, and alert hooks.",
+      "Containerized services with Docker Compose and set up reproducible local/staging envs."
+    ],
     "tech": ["Python", "C++", "PostgreSQL", "InfluxDB", "Docker", "Kafka", "Redis", "Kite Connect"],
     "link": "https://qficapital.in",
     "embedSite": "https://qficapital.in",
@@ -33,7 +45,19 @@
     "title": "Automated Property Appraisal Extraction",
     "role": "SDE Applied AI at Adaequare",
     "description": "Automated PDF report extraction that converts unstructured appraisal PDFs into structured JSON using a dual OCR + LLM pipeline.",
-    "contribution": "Architected and built a modular dual-pipeline (OCR + LLM) system with FastAPI and Streamlit, covering PDF splitting, image preprocessing, layout parsing, OCR, chunked LLM extraction, merging/deduplication, normalization, and API orchestration with centralized logging.",
+    "contribution": "Architected and built a modular dual‑pipeline (OCR + LLM) system end‑to‑end.",
+    "contributionBullets": [
+      "Implemented PDF splitting (Poppler) and image preprocessing (OpenCV) for OCR‑ready inputs.",
+      "Integrated LayoutParser/Detectron2 for layout detection and region of interest extraction.",
+      "Built OCR pipeline (Tesseract) with cleaning/deduplication for higher fidelity text.",
+      "Persisted page‑level artifacts to JSONL for traceability, reprocessing, and auditability.",
+      "Developed LLM extraction pipeline with chunking, prompt templates, and merge/normalize.",
+      "Designed FastAPI routers to orchestrate OCR/LLM flows and expose REST endpoints.",
+      "Built Streamlit dashboard for review, search, and export (JSON/CSV).",
+      "Added centralized logging, configuration management, and environment separation.",
+      "Standardized outputs and schemas for downstream consumption and analytics.",
+      "Optimized runtime and accuracy through iterative prompting and preprocessing tweaks."
+    ],
     "tech": ["FastAPI", "Python", "Poppler", "OpenCV", "Detectron2", "LayoutParser", "Tesseract", "GPT-4", "Streamlit", "JSONL", "PostgreSQL"],
     "status": "Production",
     "images": [
