--- a/frontend/public/api/projects/property-appraisal.json
+++ b/frontend/public/api/projects/property-appraisal.json
@@ -3,7 +3,16 @@
   "title": "Automated Property Appraisal Extraction",
   "role": "SDE Applied AI at Adaequare",
   "description": "Automated PDF report extraction that converts unstructured appraisal PDFs into structured JSON using a dual OCR + LLM pipeline.",
-  "contribution": "Architected and built a modular dual-pipeline (OCR + LLM) system with FastAPI and Streamlit, covering PDF splitting, image preprocessing, layout parsing, OCR, chunked LLM extraction, merging/deduplication, normalization, and API orchestration with centralized logging.",
+  "contribution": "Architected and built a modular dual‑pipeline (OCR + LLM) system end‑to‑end.",
+  "contributionBullets": [
+    "Implemented PDF splitting (Poppler) and image preprocessing (OpenCV).",
+    "Integrated LayoutParser/Detectron2 for page layout and region extraction.",
+    "Built OCR pipeline (Tesseract) with cleaning and deduplication.",
+    "Persisted page‑level artifacts to JSONL for traceability and reprocessing.",
+    "Developed LLM extraction with chunking, prompt templates, and merge/normalize.",
+    "Exposed FastAPI routers to orchestrate OCR/LLM flows; added Streamlit dashboard.",
+    "Centralized logging/config; standardized outputs for downstream analytics."
+  ],
   "tech": [
     "FastAPI",
     "Python",
@@ -26,12 +35,12 @@
   "video": "https://www.loom.com/embed/0c90f480866644fc9677b4d7feaeb4af",
   "videoPoster": "projects/property-appraisal/videoframe.png",
   "highlights": [
-    "Dual-pipeline architecture: independent OCR and LLM components for modularity.",
-    "Automated PDF processing: splitting, preprocessing, layout parsing, OCR text extraction.",
-    "Intelligent LLM extraction: chunking, merging, deduplication, normalization for structured JSON.",
-    "FastAPI REST endpoints orchestrating OCR and LLM workflows; Streamlit dashboard for review/export.",
-    "Intermediate JSONL persistence for traceability and debugging; centralized logs and config.",
-    "Business impact: hours-to-minutes turnaround, reduced manual entry, improved accuracy, production-ready."
+    "Automates 10,000+ appraisal PDFs/year; ~300 hours/month saved; faster customer turnaround.",
+    "Dual‑pipeline architecture (OCR + LLM) with clean separation for maintainability.",
+    "High‑accuracy extraction via preprocessing, layout parsing, and normalization.",
+    "API orchestration (FastAPI) and dashboard (Streamlit) for review and export.",
+    "JSONL artifact trail for traceability, debugging, and repeatable reprocessing.",
+    "Production‑ready design with centralized logging/config and extensible NLP pipeline."
   ],
   "relatedProjects": [
     "etl-pipeline"
