--- a/backend/app/content/projects.json
+++ b/backend/app/content/projects.json
@@ -69,13 +69,13 @@
       "JSONL artifact trail for traceability, debugging, and repeatable reprocessing.",
       "Production‑ready design with centralized logging/config and extensible NLP pipeline."
     ],
-    "relatedProjects": ["etl-pipeline"],
+    "relatedProjects": ["tax-roll-pipeline"],
     "relatedPosts": ["fastapi-practices"],
     "featured": true,
     "kind": "project"
   },
   {
-    "id": "etl-pipeline",
+    "id": "tax-roll-pipeline",
     "title": "Automated Tax Roll Processing Pipeline",
     "role": "SDE Applied AI at Adaequare",
     "description": "Enterprise data transformation system automating tax roll data matching across 3,000+ counties. A hybrid AI‑assisted two‑layer matching approach maps diverse county formats to standardized schemas, reducing analyst workload while preserving high accuracy.",
@@ -91,7 +91,13 @@
     ],
     "tech": ["Python 3.11", "FastAPI", "PostgreSQL (Azure)", "SQLAlchemy", "Pandas", "Google Gemini 1.5 Pro", "React 18", "TypeScript", "Vite", "React Query", "Node.js", "Docker", "OpenAPI"],
     "status": "Production",
-    "images": [],
+    "images": [
+      "projects/tax-roll-pipeline/ss1.png",
+      "projects/tax-roll-pipeline/ss2.png",
+      "projects/tax-roll-pipeline/ss3.png",
+      "projects/tax-roll-pipeline/ss7.png",
+      "projects/tax-roll-pipeline/ss9.png"
+    ],
     "highlights": [
       "60% reduction in analyst review time; higher throughput for operations.",
       "70%+ auto‑acceptance without manual intervention; 95%+ with AI escalation.",
