--- a/frontend/public/api/projects.json
+++ b/frontend/public/api/projects.json
@@ -95,7 +95,7 @@
       "Production‑ready design with centralized logging/config and extensible NLP pipeline."
     ],
     "relatedProjects": [
-      "etl-pipeline"
+      "tax-roll-pipeline"
     ],
     "relatedPosts": [
       "fastapi-practices"
@@ -104,7 +104,7 @@
     "kind": "project"
   },
   {
-    "id": "etl-pipeline",
+    "id": "tax-roll-pipeline",
     "title": "Automated Tax Roll Processing Pipeline",
     "role": "SDE Applied AI at Adaequare",
     "description": "Enterprise data transformation system automating tax roll data matching across 3,000+ counties. A hybrid AI‑assisted two‑layer matching approach maps diverse county formats to standardized schemas, reducing analyst workload while preserving high accuracy.",
@@ -134,7 +134,13 @@
       "OpenAPI"
     ],
     "status": "Production",
-    "images": [],
+    "images": [
+      "projects/tax-roll-pipeline/ss1.png",
+      "projects/tax-roll-pipeline/ss2.png",
+      "projects/tax-roll-pipeline/ss3.png",
+      "projects/tax-roll-pipeline/ss7.png",
+      "projects/tax-roll-pipeline/ss9.png"
+    ],
     "highlights": [
       "60% reduction in analyst review time; higher throughput for operations.",
       "70%+ auto‑acceptance without manual intervention; 95%+ with AI escalation.",
