Add tax-roll-pipeline project details and update related project reference
- Introduced a new JSON file for the "Automated Tax Roll Processing Pipeline" project, detailing its features, contributions, technology stack, and highlights.
- Updated the related project reference in the property appraisal JSON from "etl-pipeline" to "tax-roll-pipeline" for consistency.

--- a/frontend/public/api/projects/property-appraisal.json
+++ b/frontend/public/api/projects/property-appraisal.json
@@ -43,7 +43,7 @@
     "Production‑ready design with centralized logging/config and extensible NLP pipeline."
   ],
   "relatedProjects": [
-    "etl-pipeline"
+    "tax-roll-pipeline"
   ],
   "relatedPosts": [
     "fastapi-practices"
