Add related projects reference to Automated Tax Roll Processing Pipeline
- Included a new "relatedProjects" field in the JSON file, linking to the "property-appraisal" project for better context and navigation.

--- a/backend/app/content/projects.json
+++ b/backend/app/content/projects.json
@@ -107,6 +107,7 @@
       "Scalable architecture for 3,000+ counties.",
       "Production‑ready POC: OpenAPI docs, Docker‑ready, PII masking and sample limiting."
     ],
+    "relatedProjects": ["property-appraisal"],
     "featured": false,
     "kind": "project"
   }
