--- a/frontend/public/api/projects.json
+++ b/frontend/public/api/projects.json
@@ -150,6 +150,9 @@
       "Scalable architecture for 3,000+ counties.",
       "Production‑ready POC: OpenAPI docs, Docker‑ready, PII masking and sample limiting."
     ],
+    "relatedProjects": [
+      "property-appraisal"
+    ],
     "featured": false,
     "kind": "project"
   },
