Add new image for contract extraction project in JSON files
- Included "arch.png" in the images array for the contract extraction project across backend and frontend JSON files to enhance visual representation.
- Added the corresponding image file to the media directories for both backend and frontend.

--- a/backend/app/content/projects.json
+++ b/backend/app/content/projects.json
@@ -133,6 +133,7 @@
     "tech": ["Python 3.10+", "FastAPI", "Pydantic", "Google Gemini 3 Pro", "Google Cloud Vision API","PyMuPDF", "python-docx", "Streamlit", "Docker", "GCP Cloud Run", "Cloud SQL", "PostgreSQL"],
     "status": "Alpha (Beta Testing)",
     "images": [
+      "projects/contract-extraction/arch.png",
       "projects/contract-extraction/msa_api.png"
     ],
     "video": null,
