Update project entries for document data extraction and trading bot
- Replaced the "Weekend Trading Bot" entry with a new "Document Data Extraction" project, detailing its modular architecture and technology stack.
- Added a new entry for "Trading and Backtesting Bot," highlighting its algorithmic trading capabilities and backtesting features.
- Updated related projects references to ensure accurate associations across multiple JSON files.

--- a/backend/app/content/projects.json
+++ b/backend/app/content/projects.json
@@ -32,7 +32,7 @@
       "Multi‑asset capability (equities/derivatives) via a unified data plane.",
       "Co‑founder leadership: tech vision, mentoring, and early engineering hiring."
     ],
-    "relatedProjects": ["trading-bot"],
+    "relatedProjects": ["trading-and-backtesting-bot"],
     "relatedPosts": ["startup-journey"],
     "featured": true,
     "kind": "project"
