Add collaboration and service details to experimental and project entries
- Introduced collaboration and service fields across multiple projects in the experimental and projects JSON files, specifying availability and contact information.
- Updated service descriptions to clarify available options and enhance project representation.
- Ensured consistency in collaboration details to improve user engagement and project visibility.

--- a/backend/app/content/projects.json
+++ b/backend/app/content/projects.json
@@ -34,6 +34,15 @@
     ],
     "relatedProjects": ["trading-and-backtesting-bot"],
     "relatedPosts": ["startup-journey"],
+    "collaboration": {
+      "seeking": false,
+      "types": [],
+      "contact": "/contact"
+    },
+    "service": {
+      "available": false,
+      "description": ""
+    },
     "featured": true,
     "kind": "project"
   },
@@ -71,6 +80,15 @@
     ],
     "relatedProjects": ["contract-extraction", "tax-roll-pipeline"],
     "relatedPosts": ["fastapi-practices"],
+    "collaboration": {
+      "seeking": false,
+      "types": [],
+      "contact": "/contact"
+    },
+    "service": {
+      "available": false,
+      "description": ""
+    },
     "featured": true,
     "kind": "project"
   },
@@ -109,6 +127,15 @@
     ],
     "relatedProjects": ["contract-extraction", "property-appraisal"],
     "relatedPosts": ["etl-pipelines"],
+    "collaboration": {
+      "seeking": false,
+      "types": [],
+      "contact": "/contact"
+    },
+    "service": {
+      "available": false,
+      "description": ""
+    },
     "featured": false,
     "kind": "project"
   },
@@ -148,6 +175,15 @@
     ],
     "relatedProjects": ["property-appraisal", "tax-roll-pipeline"],
     "relatedPosts": ["llm-patterns", "fastapi-practices"],
+    "collaboration": {
+      "seeking": false,
+      "types": [],
+      "contact": "/contact"
+    },
+    "service": {
+      "available": false,
+      "description": ""
+    },
     "featured": true,
     "kind": "project"
   }
